--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -7,14 +7,9 @@
         <h2 class="title">
             Get It Done
             <br />
-            With Us Today
+            With Us Today.
         </h2>
-        <p>
-            Say something catchy, informative, and encouraging to click the
-            button to go to the contact page. I like to add these to the bottom
-            of all pages.
-        </p>
-        <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
+        <a href="/contact" class="cs-button-solid">View our templates in action</a>
     </div>
     <picture>
         <source
