--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -6,7 +6,7 @@
 @media only screen and (min-width: 0rem) {
   :root {
     --primary: black //black for buttons etc.
-    //--primaryLight: #ffd675;
+        //--primaryLight: #ffd675;
     --secondary: white //white for white buttons
     //--secondaryLight: #001f3f;
     --headerColor: #1a1a1a;
@@ -138,7 +138,7 @@
     width: 92%;
   }
   h1 {
-    color: #FFF;
+    color: #fff;
     text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
     font-family: "Keania One";
     font-size: 89px;
@@ -1154,210 +1154,191 @@
 <--- -------------------------- -*/
 /* Mobile */
 @media only screen and (min-width: 0rem) {
-  #footer {
-    background: #1c1c1c;
-    padding: 5.25rem 0 1.25rem;
-    font-size: min(4vw, 1.2em);
-  }
-  #footer .left-section {
-    margin: auto;
-    margin-bottom: 3.125rem;
-    text-align: center;
-  }
-  #footer .left-section .logo {
-    display: inline-block;
-    margin: auto;
-    margin-bottom: 1.875em;
-    height: 2em;
-    width: auto;
-    text-align: center;
-  }
-  #footer .left-section .logo img {
-    display: block;
-    height: 100%;
-    width: auto;
-  }
-  #footer .left-section p {
-    opacity: 0.9;
-    margin: auto;
-    width: 100%;
-    font-size: 0.875rem;
-    line-height: 1.9285714286rem;
-    color: #fff;
-    text-align: center;
-  }
-  #footer .right-section {
-    margin: auto;
-    max-width: 25.4375rem;
-    width: 96%;
-  }
-  #footer .right-section .lists {
+  #footer.footer-new {
+    background-color: rgb(0, 0, 0);
     display: flex;
+    padding: 12px 23px 68px 23px;
+    flex-direction: column;
+    overflow: hidden;
+    align-items: flex-start;
+  }
+  #footer.footer-new .footer-container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  #footer.footer-new .footer-header {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    gap: 20px;
+    font-family: Roboto, -apple-system, Roboto, Helvetica, sans-serif;
+    font-size: 20px;
+    color: #fff;
+    font-weight: 400;
+    white-space: normal;
+    letter-spacing: 0px;
+    line-height: 1;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: auto;
-    max-width: 19.1875rem;
-    width: 96%;
   }
-  #footer .right-section .lists ul {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
+  #footer.footer-new .footer-header .footer-logo {
+    aspect-ratio: 3.18;
+    object-fit: contain;
+    object-position: center;
+    width: 261px;
+    flex-shrink: 0;
+    max-width: 100%;
   }
-  #footer .right-section .lists ul li {
-    opacity: 0.9;
-    margin-bottom: 0.75rem;
-    list-style: none;
-    font-size: 1.125rem;
+  #footer.footer-new .footer-header .footer-email {
+    font-family: Roboto;
+    line-height: 32px;
+    letter-spacing: 0px;
+    margin: auto 0;
+  }
+  #footer.footer-new .footer-tagline {
     color: #fff;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0px;
+    margin-top: 15px;
   }
-  #footer .right-section .lists ul li a {
-    text-decoration: none;
-    line-height: 1.1666666667em;
-    color: #fff;
-    transition: color 0.3s;
+  #footer.footer-new .footer-navigation {
+    z-index: 10;
+    margin-top: 51px;
+    margin-left: 10px;
+    width: 426px;
+    max-width: 100%;
   }
-  #footer .right-section .lists ul li a:hover {
-    color: var(--primary);
-  }
-  #footer .right-section .lists ul h2 {
-    position: relative;
-    margin-bottom: 2.3125rem;
-    text-transform: uppercase;
-    font-size: 1.125rem;
-    line-height: 1.1666666667em;
-    font-weight: bold;
-    color: #fff;
-  }
-  #footer .right-section .lists ul h2:before {
-    position: absolute;
-    bottom: -1rem;
-    left: 0;
-    content: "";
-    opacity: 1;
-    display: block;
-    background: var(--primary);
-    height: 0.125rem;
-    width: 6.0625rem;
-  }
-  #footer .right-section .lists ul:nth-of-type(3) {
-    margin-top: 3.125rem;
-  }
-  #footer .right-section .lists ul:nth-of-type(3) li {
+  #footer.footer-new .footer-navigation .footer-nav-container {
+    gap: 20px;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-bottom: 1rem;
+    flex-direction: column;
   }
-  #footer .right-section .lists ul:nth-of-type(3) li:last-of-type {
-    margin-bottom: 0;
-  }
-  #footer .right-section .buttons {
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: stretch;
+    line-height: normal;
+    width: 100%;
+    margin-left: 0;
   }
-  #footer .right-section .cs-button-solid {
-    margin: 0;
-    height: 3.3125rem;
-    width: 15.625rem;
-    padding-top: 0.1875rem;
-  }
-  #footer .credit {
-    margin: auto;
-    margin-top: 6.25rem;
-    width: 96%;
-    font-size: 1rem;
-    line-height: 2.25rem;
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column .footer-nav-content {
     color: #fff;
-    text-align: center;
+    font-family: Roboto;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0px;
   }
-  #footer .credit a {
-    text-decoration: none;
-    font-size: 1rem;
-    color: var(--primary);
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column .footer-nav-content .footer-nav-title {
+    font-size: 36px;
   }
-  #footer .credit a:hover {
-    text-decoration: underline;
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column .footer-nav-content .footer-nav-link {
+    font-size: 18px;
   }
-  #footer .credit .copyright {
-    display: block;
-    font-size: 1rem;
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column .footer-nav-content .footer-nav-spacer {
+    height: 0.5em;
+  }
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column:nth-child(2) {
+    margin-top: 40px;
+  }
+  #footer.footer-new .footer-decoration {
+    aspect-ratio: 2.97;
+    object-fit: contain;
+    object-position: center;
+    width: 100%;
+    align-self: stretch;
+    margin-top: 40px;
+  }
+  #footer.footer-new .footer-bottom {
+    align-self: center;
+    display: flex;
+    margin-top: 18px;
+    width: 100%;
+    max-width: 1190px;
+    align-items: flex-start;
+    gap: 8px;
+    font-family: Roboto, -apple-system, Roboto, Helvetica, sans-serif;
+    font-size: 20px;
+    color: #fff;
+    font-weight: 500;
+    letter-spacing: 0px;
+    line-height: 2;
+    flex-wrap: wrap;
+  }
+  #footer.footer-new .footer-bottom .footer-copyright {
+    font-family: Roboto;
+    line-height: 52px;
+    letter-spacing: 0px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    width: 1087px;
+  }
+  #footer.footer-new .footer-bottom .footer-social-icon {
+    flex-shrink: 0;
+  }
+  #footer.footer-new .footer-bottom .footer-social-icon:first-of-type {
+    aspect-ratio: 1.08;
+    object-fit: contain;
+    object-position: center;
+    width: 42px;
+    margin-top: 7px;
+  }
+  #footer.footer-new .footer-bottom .footer-social-icon:last-of-type {
+    aspect-ratio: 1;
+    object-fit: contain;
+    object-position: center;
+    width: 33px;
+    margin-top: 10px;
   }
 }
-/* Small Desktop */
-@media only screen and (min-width: 64rem) {
-  #footer {
-    font-size: min(1.2vw, 1em);
+/* Tablet */
+@media only screen and (min-width: 48rem) {
+  #footer.footer-new .footer-navigation {
+    margin-top: 30px;
   }
-  #footer .container {
+  #footer.footer-new .footer-navigation .footer-nav-container {
+    gap: 20px;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    margin: auto;
-    max-width: 82.5rem;
-    width: 96%;
-    padding: 0;
   }
-  #footer .left-section {
-    margin: 0;
-    width: 25.5625rem;
-    text-align: left;
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column {
+    width: 50%;
+    margin-left: 20px;
   }
-  #footer .left-section .logo {
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column:first-child {
     margin-left: 0;
-    height: 2.5rem;
-    text-align: left;
   }
-  #footer .left-section p {
-    margin-left: 0;
-    text-align: left;
-  }
-  #footer .right-section {
-    margin: 0;
-    max-width: none;
-    width: 38.0625rem;
-  }
-  #footer .right-section .lists {
-    margin: 0;
-    max-width: 48.0625rem;
-    width: 96%;
-  }
-  #footer .right-section .lists ul li a {
-    position: relative;
-  }
-  #footer .right-section .lists ul li a:before {
-    position: absolute;
-    bottom: -0.1875rem;
-    left: 0;
-    content: "";
-    opacity: 1;
-    display: block;
-    background: var(--primary);
-    height: 0.125rem;
-    width: 0%;
-    transition: width 0.3s;
-  }
-  #footer .right-section .lists ul li a:hover:before {
-    width: 100%;
-  }
-  #footer .right-section .lists ul:nth-of-type(3) {
+  #footer.footer-new .footer-navigation .footer-nav-container .footer-nav-column:nth-child(2) {
     margin-top: 0;
   }
-  #footer .right-section .lists ul:nth-of-type(3) li:first-of-type {
-    margin-bottom: 0;
+}
+/* Desktop */
+@media only screen and (min-width: 64rem) {
+  #footer.footer-new {
+    padding-left: 23px;
+    padding-right: 23px;
   }
-  #footer .right-section .buttons {
-    justify-content: flex-start;
+  #footer.footer-new .footer-header {
+    white-space: nowrap;
+    margin-bottom: -10px;
   }
-  #footer .credit .copyright {
-    display: inline-block;
+  #footer.footer-new .footer-header .footer-email {
+    white-space: nowrap;
+  }
+  #footer.footer-new .footer-tagline {
+    margin-left: 7px;
+  }
+  #footer.footer-new .footer-bottom .footer-copyright {
+    max-width: 100%;
   }
 }
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
-  body.dark-mode #footer {
-    background: #061623;
+  body.dark-mode #footer.footer-new {
+    background-color: rgb(0, 0, 0);
   }
 }
 
